feat: API for reloading current route target (#19331)
* feat: API for reloading current route target

* add tests

* Add option to optionally refresh router layouts

* Review fixes; Also handle PreserveOnRefresh routes

* Review fixes

* Unit tests for refresh